# code-browser

./: LICENSE  README.md  pyproject.toml  speckit.constitution
.specify/memory/: constitution.md
cli/: __init__.py  repo_analysis_cli.py
lib/: __init__.py  ai_summarizer.py  config.py  diagram_generator.py  git_providers.py  logging_config.py  models.py  org_clone_orchestrator.py  org_discovery.py  progress_reporting.py  readme_renderer.py  repo_analyzer.py  repo_clone.py  repo_folder_manager.py  security_scanner.py
specs/001-repo-analysis/: plan.md  quickstart.md  spec.md  tasks.md
specs/001-repo-analysis/checklists/: requirements.md  security.md
tests/contract/: test_cli_org_args.py  test_cli_repo_args.py
tests/integration/: test_org_scan_basic.py  test_readme_content.py  test_repo_subfolders_preserved.py  test_single_repo_scan.py
tests/unit/: test_ai_summarizer.py  test_readme_structure.py  test_repo_folder_manager.py  test_security_scanner.py
