[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-browser-repo-analysis"
version = "0.1.0"
description = "CLI tool to scan GitHub organizations and repositories and generate repository analysis READMEs under code-browser/."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Your Team", email = "dev@example.com" }
]
dependencies = [
  "typer[all]>=0.12.0",
  "GitPython>=3.1.0",
  "PyGithub>=2.3.0",
  "requests>=2.31.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.6.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
]

[project.scripts]
repo-analysis = "cli.repo_analysis_cli:app"

[tool.pytest.ini_options]
addopts = "--cov=lib --cov=cli --cov-report=term-missing"
testpaths = [
  "tests/unit",
  "tests/integration",
  "tests/contract",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["cli", "lib", "tests"]

[tool.setuptools]
packages = ["cli", "lib"]
license-files = ["LICENSE"]
